2016-03-04  Rob Crittenden <rcritten@redhat.com>

    * Fix a number of issues discovered by clang-analyzer
    * Become 1.0.13

2016-03-02  Rob Crittenden <rcritten@redhat.com>

    * Extract SAN from server/client certificates into env
    * Fix memory leak when renegotiating a cipher

2016-02-29  Rob Crittenden <rcritten@redhat.com>

    * Fix test for DH cipher directive
    * Check for test and netstat before trying to use them
    * Don't ignore NSSProtocol when NSSFIPS is enabled
      Based on patch by Matthew Harmsen <mharmsen@redhat.com>

2016-02-24  Rob Crittenden <rcritten@redhat.com>

    * Use proper shell syntax to avoid creating /0
    
2016-02-15  Rob Crittenden <rcritten@redhat.com>

    * tests: Centralize the openssl ciphers flags when comparing

2016-02-10  Rob Crittenden <rcritten@redhat.com>

    * Basic test case for DHE cipher negotiation

2016-02-09  Rob Crittenden <rcritten@redhat.com>

    * Remove -DH from test strings, duplicate test, fix test
    
2016-02-08 Christian Heimes <cheimes@redhat.com>
    * Add server support for DHE ciphers.
      Similar patch was provided by Vitezslav Cizek <vcizek@suse.com>
      Heavily modified by Rob Crittenden <rcritten@redhat.com>
    
2016-01-18  Rob Crittenden <rcritten@redhat.com>
    * Drop the check that NSSProxyNickname be required
    * Add basic reverse proxy test case

2016-01-14  Rob Crittenden <rcritten@redhat.com>
    * Don't send SSL alert on SNI lookup failure
    * Fail for colons in credentials with FakeBasicAuth
    * Always call SSL_ShutdownServerSessionIDCache() in ModuleKill

2015-11-18  Rob Crittenden <rcritten@redhat.com>
    * Document some python dependencies needed by make check
    * Add cipher test for ECDH+aRSA
    * Quote gcm and sha384 config values when comparing them

2015-10-02  Rob Crittenden <rcritten@redhat.com>
    * Integrate patch from Stanislav Tokos to set the SNI hostname
      on reverse proxy requests.